# ClawPowers-Skills

./: .env.example  .gitignore  .gitleaksignore  .markdownlint.json  .npmignore  ARCHITECTURE.md  BENCHMARKS.md  BUILD_SPEC.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  DEMO.md  HERMES_COMPATIBILITY.md  KNOWN_LIMITATIONS.md  LICENSE  LICENSING.md  MEASUREMENTS.md  MONETIZATION.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  VALIDATION_REPORT.md  eslint.config.mjs  gemini-extension.json  package-lock.json  package.json  skill.json  tsconfig.json  tsup.config.ts
.claude-plugin/: manifest.json
.codex/: INSTALL.md
.cursor-plugin/: manifest.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  hermes-compatibility.yml  release.yml
.opencode/: INSTALL.md
benchmarks/: itp-cache-benchmark-report.md  itp-cache-benchmark-table.md  itp-cache-multi-swarm-benchmark.mjs  itp-cache-multi-swarm-report.md  itp-cache-multi-swarm-results.json  itp-cache-swarm-benchmark.mjs  itp-cache-swarm-benchmark.ts  itp-cache-swarm-results.json  itp-measurement-results.json  itp-measurement.mjs  itp-real-benchmark-runner.ts  itp-real-llm-benchmark.ts  itp-swarm-benchmark.ts  swarm-vs-sequential.mjs
benchmarks/results/: benchmark-1775563905515.json  benchmark-1775582678502.json  benchmark-1775587271455.json  combined-benchmark-1775589741648.json  real-llm-benchmark-1775585741748.json  real-llm-benchmark-1775585808005.json  real-llm-benchmark-1775587330964.json
demos/: claude-code.md  elizaos.ts  langchain.ts
docs/: launch-posts.md  quickstart-first-transaction.md
docs/demo/: clawpowers-demo.cast
hooks/: session-start  session-start.cmd  session-start.js
native/: Cargo.toml
native/crates/canonical/: Cargo.toml
native/crates/canonical/src/: lib.rs
native/crates/compression/: Cargo.toml
native/crates/compression/benches/: compression_bench.rs
native/crates/compression/src/: lib.rs
native/crates/evm-eth/: Cargo.toml
native/crates/evm-eth/src/: lib.rs
native/crates/fee/: Cargo.toml
native/crates/fee/src/: lib.rs
native/crates/index/: Cargo.toml
native/crates/index/src/: lib.rs
native/crates/policy/: Cargo.toml
native/crates/policy/src/: lib.rs
native/crates/security/: Cargo.toml
native/crates/security/src/: lib.rs
native/crates/tokens/: Cargo.toml
native/crates/tokens/src/: lib.rs
native/crates/verification/: Cargo.toml
native/crates/verification/src/: lib.rs
native/crates/wallet/: Cargo.toml
native/crates/wallet/src/: lib.rs
native/crates/x402/: Cargo.toml
native/crates/x402/src/: lib.rs
native/ffi/: Cargo.toml
native/ffi/src/: lib.rs
native/ffi/tests/: integration.rs
native/pyo3/: Cargo.toml  pyproject.toml
native/pyo3/src/: lib.rs
native/pyo3/tests/: test_smoke.py
native/wasm/: Cargo.toml
native/wasm/pkg/: .gitignore  clawpowers_wasm.d.ts  clawpowers_wasm.js  clawpowers_wasm_bg.wasm  clawpowers_wasm_bg.wasm.d.ts  package.json
native/wasm/pkg-node/: clawpowers_wasm.d.ts  clawpowers_wasm.js  clawpowers_wasm_bg.wasm  clawpowers_wasm_bg.wasm.d.ts  package.json
native/wasm/src/: lib.rs
runtime/: init.js  init.sh
runtime/demo/: README.md  x402-mock-server.js
runtime/feedback/: analyze.js  analyze.sh
runtime/metrics/: collector.js  collector.sh
runtime/payments/: ledger.js  ledger.sh  pipeline.js
runtime/persistence/: store.js  store.sh
scripts/: build-wasm.mjs  generate_hermes_wrappers.py  hermes_wrapper_overrides.json  run-python-script.mjs  verify-consumer-install.mjs  verify-wasm-artifacts.mjs  verify_hermes_wrappers.py
skills/: README.md
skills/1password/: SKILL.md
skills/agent-bounties/: SKILL.md
skills/agent-nexus-2/: SKILL.md
skills/agent-payments/: SKILL.md
skills/apple-notes/: SKILL.md
skills/apple-reminders/: SKILL.md
skills/autoresearch/: SKILL.md
skills/bear-notes/: SKILL.md
skills/blogwatcher/: SKILL.md
skills/blucli/: SKILL.md
skills/bluebubbles/: SKILL.md
skills/brainstorming/: SKILL.md
skills/business-strategy/: SKILL.md
skills/camsnap/: SKILL.md
skills/canvas/: SKILL.md
skills/clawhub/: SKILL.md
skills/coding-agent/: SKILL.md
skills/coding-discipline.skill/: SKILL.md
skills/content-pipeline/: SKILL.md
skills/content-writer/: SKILL.md
skills/cross-project-knowledge/: SKILL.md
skills/discord/: SKILL.md
skills/dispatching-parallel-agents/: SKILL.md
skills/economic-code-optimization/: SKILL.md
skills/eightctl/: SKILL.md
skills/executing-plans/: SKILL.md
skills/execution-validation.skill/: SKILL.md
skills/finishing-a-development-branch/: SKILL.md
skills/formal-verification-lite/: SKILL.md
skills/gemini/: SKILL.md
skills/gh-issues/: SKILL.md
skills/gifgrep/: SKILL.md
skills/github/: SKILL.md
skills/gog/: SKILL.md
skills/goplaces/: SKILL.md
skills/healthcheck/: SKILL.md
skills/himalaya/: SKILL.md
skills/humanize/: SKILL.md
skills/imsg/: SKILL.md
skills/itp/: SKILL.md
skills/learn-how-to-learn/: SKILL.md
skills/market-intelligence/: SKILL.md
skills/mcporter/: SKILL.md
skills/meta-skill-evolution/: SKILL.md
skills/model-usage/: SKILL.md
skills/nano-pdf/: SKILL.md
skills/node-connect/: SKILL.md
skills/notion/: SKILL.md
skills/obsidian/: SKILL.md
skills/openai-whisper/: SKILL.md
skills/openai-whisper-api/: SKILL.md
skills/openhue/: SKILL.md
skills/oracle/: SKILL.md
skills/ordercli/: SKILL.md
skills/peekaboo/: SKILL.md
skills/polyclaw/: SKILL.md
skills/prospecting/: SKILL.md
skills/prospector/: SKILL.md
skills/receiving-code-review/: SKILL.md
skills/requesting-code-review/: SKILL.md
skills/rsi.skill/: SKILL.md
skills/sag/: SKILL.md
skills/security/: SKILL.md
skills/security-audit/: SKILL.md
skills/slack/: SKILL.md
src/: config.ts  constants.ts  index.ts  types.ts
tests/: config.test.ts  run_all.sh  skills-loader.test.ts  test_metrics_collector.sh  test_runtime_init.sh  test_session_hook.sh  test_skill_frontmatter.sh  test_skill_registry.sh  types.test.ts
(+87 files in other folders)
