[package]
name = "clawpowers-canonical"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native"]
native = ["rusqlite"]
wasm = []

[dependencies]
rusqlite = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
