[package]
name = "clawpowers-fee"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
alloy-primitives = { workspace = true }
clawpowers-tokens = { path = "../tokens" }

[dev-dependencies]
