[package]
name = "clawpowers-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
clawpowers-compression = { path = "../compression" }

[dev-dependencies]
rand = { workspace = true }
