[package]
name = "clawpowers-verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native"]
native = ["clawpowers-canonical/native"]
wasm = ["clawpowers-canonical/wasm"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clawpowers-canonical = { path = "../canonical", default-features = false }

[dev-dependencies]
rusqlite = { workspace = true }
