[package]
name = "clawpowers-x402"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native"]
native = []
wasm = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
clawpowers-fee = { path = "../fee" }
clawpowers-tokens = { path = "../tokens" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true }
